public/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');

:root {
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

img, .gallery a {
  display: inline-block;
  width: 100%;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.app {
  margin: 2em 1em;
}

.app > * + *  {
  margin-top: 1em;
}

.profile__header {
  flex-direction: column;
  align-items: center;
  display: flex;
}

.profile__header h1 {
  line-height: 1.6rem;
  font-size: 0.9rem;
  color: #4E5150;
}

.profile__header h2 {
  line-height: 1.4rem;
  font-size: 0.7rem;
  color: #A9A9A9;
}

.profile__avatar {
  margin-bottom: 0.5em;
  order: -1;
}

.profile__avatar img {
  border-radius: 38px;
  width: 101px;
}

.stats {
  margin-bottom: 2em;
}

.stats ol {
  justify-content: center;
  list-style: none;
  display: flex;
}

.stats ol > li + li {
  margin-left: 1em;
}

.stats__item {
  background-color: #E5E5E5;
  border-radius: 16px;
  text-align: center;
  padding: 1em 1.5em;
  font-size: 0.7rem;
  color: #4E5150;
}

.stats__item p span {
  display: block;
}

.gallery {
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto;
  column-gap: 0.8rem;
  row-gap: 0.5em;
  display: grid;
}

.gallery__item--wide {
  grid-column: span 2;
}

.gallery__item--tall {
  grid-row: span 2;
  height: auto;
}

.gallery__item--wide a,
.gallery__item--tall a,
.gallery__item a {
  object-position: center;
  object-fit: contain;
  height: auto;
}

.gallery__item--wide a img,
.gallery__item--tall a img,
.gallery__item a img {
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20), 0px 4px 10px rgba(0, 0, 0, 0.10);
  border-radius: 12px;
  object-fit: cover;
  display: block;
  height: 100%;
  width: 100%;
}

.app > footer {
  margin-top: 4em;
  margin-bottom: 2em;
}

.app > footer {
  text-align: center;
  color: #A9A9A9;
  font-weight: 600;
  font-size: 0.9rem;
}

.app > footer a {
  text-decoration: none;
  color: #A9A9A9;
}

.app > footer a:hover {
    text-decoration: underline;
}

@media (min-width: 768px) {
  .profile__header h1 {
    line-height: 2rem;
    font-size: 1.5rem;
  }

  .profile__header h2 {
    line-height: 2rem;
    font-size: 0.9rem;
  }

  .profile__avatar img {
    border-radius: 60px;
    width: 156px;
  }

  .stats__item {
    padding: 1em 2em;
    font-size: 0.9rem;
  }

  .stats__item span {
    font-size: 1.1rem;
  }
}

@media (min-width: 1024px) {
  .app {
    margin: 4em auto;
    width: 960px;
  }

  .gallery {
    column-gap: 1.8rem;
    row-gap: 1.5em;
  }

  .app > footer {
    margin-top: 5em;
    margin-bottom: 2em;
  }
}

